--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
     <head>
         <title>My awesome web page</title>
     </head>
-
-  <body>
-    Hello there, awesome person! 
-  </body>
-
+    <body>
+        Hello there, awesome person!
+        <h1> Hello there, awesome person!</h1>
+        <img src = "https://avatars.githubusercontent.com/u/77836063?v=4">
+    </body>
 </html>
